@@ -23,6 +23,8 @@ Changes in version 1.2.10
     Windows
   * screenshots and printer output are saved in PNG format instead of
     TGA
+  * various improvements and new features in the compress utility
+  * snapshot and demo files can be compressed in epcompress format
   * added support for building with FLTK 1.3.x and Lua 5.2/5.3, and for
     building 64-bit Windows binaries
   * OpenGL has been made an optional dependency at compile time
